# pytex-lib

./: .gitignore  _old_pyproject.toml  pyproject.toml
pytex_lib/: __init__.py  core.py
pytex_lib.egg-info/: PKG-INFO  SOURCES.txt
tests/: test.fdb_latexmk  test.fls  test.py  test.tex
