[project]
name = "pytex-lib"
version = "0.1.0"
description = ""
authors = [
    {name = "XPS-13",email = "gkerr708@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
